import React from "react";
import CourseForm from "../CourseForm";
import renderer from "react-test-renderer";
import { courses, authors } from "../../../../tools/mockData";

it("Should show 'saving...' when the data is being saved", () => {
  const tree = renderer.create(
    <CourseForm
      course={courses[0]}
      authors={authors}
      onSave={jest.fn()}
      onChange={jest.fn()}
      saving={true}
    />
  );
  expect(tree).toMatchSnapshot();
});

it("Should show 'save' when the data is being saved", () => {
  const tree = renderer.create(
    <CourseForm
      course={courses[0]}
      authors={authors}
      onSave={jest.fn()}
      onChange={jest.fn()}
      saving={false}
    />
  );
  expect(tree).toMatchSnapshot();
});
